c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/initializers/non_constant_static_elem_init.c
struct pair {
  int a;
  int b;
};

struct pair x = {1, 2};
struct outer {
    double d;
    struct pair inner;
};

// you can't initialize an element in a static variable with a non-constant expression
struct outer y = {1.0, x};